--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,6 @@
 # specify pathway to dataset data/project_dataset.csv
 # if all datasets are too large then use data/*.csv (only ignores CSVs)
 # if you have other file types then use appropriate extension data/*.rds
-04_atttempt/results/4a_bt_tune.rda
-06_atttempt/results/6a_lin_reg_fit.rda
+04_attempt/results/4a_bt_tune.rda
+06_attempt/results/6a_lin_reg_fit.rda
+data_split/
