--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,6 @@
 # if you have other file types then use appropriate extension data/*.rds
 04_attempt/results/4a_bt_tune.rda
 06_attempt/results/6a_lin_reg_fit.rda
+06_attempt/results/6a_bt_tune.rda
+06_attempt/results/6a_rf_tune.rda
 data_split/
