--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,17 @@ data_split/
 07_attempt/results/7a_var_select_lasso_fit.rda
 07_attempt/results/7a_reg_ensemble.rda
 07_attempt/recipes/7a_recipe.rda
-
+08_attempt/recipes/8a_svm_tune.rda
+08_attempt/recipes/8a_bt_gbm_tune.rda
+09_attempt/recipes/9a_bt_gbm_tune.rda
+09_attempt/recipes/9a_model_comparison.rda
+09_attempt/recipes/9a_prediction_helpers.rda
+09_attempt/recipes/9a_var_select_fit_bt.rda
+09_attempt/recipes/9a_var_select_fit_lasso.rda
+10_attempt/recipes/10b_var_select_lasso_fit.rda
+10_attempt/recipes/10b_var_select_fit_bt.rda
+10_attempt/recipes/10a_reg_ensemble.rda
+10_attempt/recipes/10a_reg_stack_blend.rda
+10_attempt/recipes/10a_bt_gbm_tune.rda
+10_attempt/recipes/10b_bt_xg_tune.rda
+10_attempt/recipes/10b_svm_tune.rda
