--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,72 @@
-# History files
+# R session files
 .Rhistory
 .Rapp.history
-
-# Session Data files
 .RData
 .RDataTmp
-
-# User-specific files
 .Ruserdata
+.Renviron
 
-# RStudio files
+# RStudio project files
 .Rproj.user/
 *.Rproj
 
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+# System files
+.DS_Store
+**/.DS_Store
 
-# knitr and R markdown default cache directories
+# R Markdown cache
 *_cache/
-/cache/
-
-# Temporary files created by R markdown
+*/cache/
 *.utf8.md
 *.knit.md
 
-# R Environment Variables
-.Renviron
+# OAuth tokens
+.httr-oauth
 
-# mac related files
-*.DS_Store
-**/.DS_Store
+# Ignore all model result and recipe files
+**/results/*.rda
+**/recipes/*.rda
 
-# ignore files (likely datasets) if too large (> 100 MB)
-# specify pathway to dataset data/project_dataset.csv
-# if all datasets are too large then use data/*.csv (only ignores CSVs)
-# if you have other file types then use appropriate extension data/*.rds
+# Ignore large data-related files
 data_split/
-04_attempt/results/4a_bt_tune.rda
-06_attempt/results/6a_lin_reg_fit.rda
-06_attempt/results/6a_bt_tune.rda
-06_attempt/results/6a_rf_tune.rda
-06_attempt/results/6b_bt_tune.rda
-06_attempt/results/6b_rf_tune.rda
-06_attempt/results/reg_stack_blend.rda
-06_attempt/results/var_select_fit_bt.rda
-06_attempt/results/reg_ensemble.rda
-07_attempt/results/7a_en_tune.rda
-07_attempt/results/7a_bt_gbm_tune.rda
-07_attempt/results/7q_bt_xg_tune.rda
+data/*.csv
+data/*.rda
+
+# Explicit large model files (if they slip through)
 07_attempt/results/7a_rf_tune.rda
-07_attempt/results/7a_reg_stack_blend.rda
-07_attempt/results/7a_var_select_fit_bt.rda
-07_attempt/results/7a_var_select_lasso_fit.rda
+06_attempt/results/6b_rf_tune.rda
+06_attempt/results/6b_bt_tune.rda
+06_attempt/results/6a_rf_tune.rda
+06_attempt/results/reg_ensemble.rda
 07_attempt/results/7a_reg_ensemble.rda
-07_attempt/recipes/7a_recipe.rda
-08_attempt/recipes/8a_svm_tune.rda
-08_attempt/recipes/8a_bt_gbm_tune.rda
-09_attempt/recipes/9a_bt_gbm_tune.rda
-09_attempt/recipes/9a_model_comparison.rda
-09_attempt/recipes/9a_prediction_helpers.rda
-09_attempt/recipes/9a_var_select_fit_bt.rda
-09_attempt/recipes/9a_var_select_fit_lasso.rda
-10_attempt/recipes/10b_var_select_lasso_fit.rda
-10_attempt/recipes/10b_var_select_fit_bt.rda
-10_attempt/recipes/10a_reg_ensemble.rda
-10_attempt/recipes/10a_reg_stack_blend.rda
-10_attempt/recipes/10a_bt_gbm_tune.rda
-10_attempt/recipes/10b_bt_xg_tune.rda
-10_attempt/recipes/10b_svm_tune.rda
+10_attempt/results/10a_reg_ensemble.rda
+07_attempt/results/7a_reg_stack_blend.rda
+06_attempt/results/reg_stack_blend.rda
+10_attempt/results/10a_reg_stack_blend.rda
+09_attempt/results/9a_model_comparison.rda
+10_attempt/results/10a_bt_gbm_tune.rda
+09_attempt/results/9a_bt_gbm_tune.rda
+06_attempt/results/6a_bt_tune.rda
+10_attempt/results/10b_svm_tune.rda
+10_attempt/results/10b_bt_xg_tune.rda
+07_attempt/results/7a_en_tune.rda
+07_attempt/results/7a_svm_tune.rda
+08_attempt/results/8a_svm_tune.rda
+08_attempt/results/8a_bt_gbm_tune.rda
+07_attempt/results/7a_bt_gbm_tune.rda
+07_attempt/results/7a_bt_xg_tune.rda
+03_attempt/results/3a_bt_tune.rda
+02_attempt/results/2a_bt_tune.rda
+01_attempt/results/1a_bt_tune.rda
+12_attempt/results/12b_bt_gbm_tune.rda
+12_attempt/results/12a_bt_gbm_tune.rda
+11_attempt/results/11a_bt_gbm_tune.rda
+10_attempt/results/10b_var_select_lasso_fit.rda
+10_attempt/results/10b_var_select_fit_bt.rda
+09_attempt/results/9a_var_select_fit_bt.rda
+07_attempt/results/7a_var_select_lasso_fit.rda
+07_attempt/results/7a_var_select_fit_bt.rda
+06_attempt/results/var_select_fit_bt.rda
+data/train.csv
+data/test.csv
+data_split/reg_folds.rda
